[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/ship.svg" type="Texture" id=1]
[ext_resource path="res://fonts/chemical-reaction-brk.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=3]


[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 85
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Ship" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_right = 60.0
margin_bottom = 102.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Ship" type="TextureRect" parent="."]
modulate = Color( 0, 0.803922, 0.0862745, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 102.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Score" type="Label" parent="."]
margin_left = 60.0
margin_right = 135.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="P2Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.0
margin_right = -59.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="P1Wins" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -41.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 2 )
text = "Red Wins!"
align = 1

[node name="P2Wins" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -41.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 2 )
text = "Green Wins!"
align = 1

[node name="Tie" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -41.5
margin_bottom = 41.5
custom_fonts/font = SubResource( 3 )
text = "Tie"
align = 1
